fix(ui) Fix a bug on Safari.

--- a/hub/ui/static/style/main.css
+++ b/hub/ui/static/style/main.css
@@ -231,6 +231,7 @@ main {
     --thing--frame--font-size-secondary: var(--font-size-tertiary);
     --thing--frame--padding-block: var(--space);
     --thing--frame--padding-inline: var(--space-large);
+    --thing--frame--border-radius: var(--space-very-large);
 
     display: flex;
     flex-direction: column-reverse;
@@ -240,7 +241,7 @@ main {
     height: 9.5rem;
     padding: var(--thing--frame--padding-block) var(--thing--frame--padding-inline);
 
-    border-radius: var(--space-very-large);
+    border-radius: var(--thing--frame--border-radius);
     box-shadow: var(--shadow-distance) var(--shadow-distance) var(--shadow-blur) var(--color-light-200),
                 calc(-1 * var(--shadow-distance)) calc(-1 * var(--shadow-distance)) var(--shadow-blur) var(--color-light-000);
     background: var(--color-light-000);
@@ -728,34 +729,32 @@ main {
         gap: var(--space-small);
     }
 
+    .thing--text > .thing--frame-content svg {
+        width: 2rem;
+    }
+
     .thing--text > .thing--frame-content ul {
         list-style: none;
         margin: 0;
         padding: 0;
         display: grid;
+        grid-auto-flow: row;
         place-content: center;
         gap: var(--space-small);
     }
 
 .thing--slider {}
 
-    .thing--slider > .thing--frame-content {
-        display: grid;
-        place-items: center;
-    }
-
     .thing--slider .thing--slider-content {
-        position: relative;
         display: grid;
         grid-auto-flow: column;
         grid-auto-columns: 100%;
         overflow: auto hidden;
 
-        height: 100%;
-        aspect-ratio: 1 / 1;
-
         overscroll-behavior-inline: contain;
         scroll-snap-type: x mandatory;
+
+        border-radius: var(--thing--frame--border-radius); /* bug on Safari */
     }
 
     .thing--slider .thing--slider-content > * {
@@ -771,7 +770,7 @@ main {
 
     .thing--slider .thing--slider-content > * > figure > figcaption {
         position: absolute;
-        bottom: 13%;
+        bottom: 9%;
         left: 50%;
         transform: translateX(-50%);
 
@@ -783,7 +782,6 @@ main {
 
     .thing--slider .thing--slider-content > * > figure > img {
         width: 100%;
-        aspect-ratio: 1 / 1;
         object-fit: cover;
     }
 
